add_executable(mtest "mtest.c")
add_executable(mtest2 "mtest2.c")
add_executable(mtest3 "mtest3.c")
add_executable(mtest4 "mtest4.c")
add_executable(mtest5 "mtest5.c")
# add_executable(mtest6 "mtest6.c")

target_link_libraries(mtest PRIVATE lmdb)
target_link_libraries(mtest2 PRIVATE lmdb)
target_link_libraries(mtest3 PRIVATE lmdb)
target_link_libraries(mtest4 PRIVATE lmdb)
target_link_libraries(mtest5 PRIVATE lmdb)
# target_link_libraries(mtest6 PRIVATE lmdb)

add_test(mtest mtest)
add_test(mtest2 mtest2)
add_test(mtest3 mtest3)
add_test(mtest4 mtest4)
add_test(mtest5 mtest5)
# add_test(mtest6 mtest6)
